--- a/po/nl.po
+++ b/po/nl.po
@@ -1,20 +1,21 @@
-# translation of gst-plugins-good-0.10.16.2.nl.po to Dutch
+# translation of gst-plugins-good-0.10.23.2.nl.po to Dutch
 # This file is put in the public domain.
 #
 # Freek de Kruijf <f.de.kruijf@hetnet.nl>, 2007, 2008, 2009.
+# Freek de Kruijf <f.de.kruijf@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.16.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.23.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-25 18:48+0200\n"
-"PO-Revision-Date: 2009-11-15 22:55+0100\n"
-"Last-Translator: Freek de Kruijf <f.de.kruijf@hetnet.nl>\n"
+"POT-Creation-Date: 2010-09-02 19:45+0100\n"
+"PO-Revision-Date: 2010-08-29 21:49+0200\n"
+"Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 msgid "Could not establish connection to sound server"
@@ -182,26 +183,26 @@ msgid "Could not open audio device for recording."
 msgstr "Kan het audio-apparaat niet openen voor opnemen."
 
 msgid "Could not open audio device for mixer control handling."
-msgstr "Kan het audio-apparaat niet openen voor de mixerbesturing."
+msgstr "Kan het audio-apparaat niet openen voor het besturen van de mixer."
 
 msgid ""
 "Could not open audio device for mixer control handling. This version of the "
 "Open Sound System is not supported by this element."
 msgstr ""
-"Kan het audio-apparaat niet openen voor de mixerbesturing. Deze versie van "
-"het Open Soundsysteem wordt niet ondersteund door dit element."
+"Kan het audio-apparaat niet openen voor besturen van de mixer. Deze versie "
+"van het Open Sound System wordt niet ondersteunt door dit element."
 
 msgid "Master"
 msgstr "Master"
 
 msgid "Front"
-msgstr "Voorzijde"
+msgstr "Voorkant"
 
 msgid "Rear"
 msgstr "Achterzijde"
 
 msgid "Headphones"
-msgstr "Hoofdtelefoon"
+msgstr "Hoofdtelefoons"
 
 msgid "Center"
 msgstr "Midden"
@@ -225,16 +226,16 @@ msgid "AUX 2 Out"
 msgstr "AUX 2-out"
 
 msgid "AUX Out"
-msgstr "AUX-out"
+msgstr "AUX-uit"
 
 msgid "3D Depth"
-msgstr "3D diepte"
+msgstr "3D-diepte"
 
 msgid "3D Center"
-msgstr "3D midden"
+msgstr "3D-centrum"
 
 msgid "3D Enhance"
-msgstr "3D verbeteren"
+msgstr "3D-verbeteren"
 
 msgid "Telephone"
 msgstr "Telefoon"
@@ -243,7 +244,7 @@ msgid "Line Out"
 msgstr "Line-out"
 
 msgid "Line In"
-msgstr "Line-in"
+msgstr "Lijn-in"
 
 msgid "Internal CD"
 msgstr "Interne cd"
@@ -264,19 +265,19 @@ msgid "Record Gain"
 msgstr "Opnameversterking"
 
 msgid "Output Gain"
-msgstr "Uitgangversterking"
+msgstr "Uitgangsversterking"
 
 msgid "Microphone Boost"
 msgstr "Microfoon-boost"
 
 msgid "Loopback"
-msgstr "Terugkoppeling"
+msgstr "Loopback"
 
 msgid "Diagnostic"
-msgstr "Diagnostiek"
+msgstr "Diagnose"
 
 msgid "Bass Boost"
-msgstr "Lage tonen-boost"
+msgstr "Bas-boost"
 
 msgid "Playback Ports"
 msgstr "Afspeelpoorten"
@@ -300,7 +301,7 @@ msgid "Stereo"
 msgstr "Stereo"
 
 msgid "Surround Sound"
-msgstr "Surround geluid"
+msgstr "Surround-geluid"
 
 msgid "Microphone Gain"
 msgstr "Microfoonversterking"
@@ -312,19 +313,19 @@ msgid "Microphone Source"
 msgstr "Microfoonbron"
 
 msgid "Jack"
-msgstr "Jack"
+msgstr "Plug"
 
 msgid "Center / LFE"
 msgstr "Midden / LFE"
 
 msgid "Stereo Mix"
-msgstr "Stereo mix"
+msgstr "Stereo-mix"
 
 msgid "Mono Mix"
-msgstr "Mono mix"
+msgstr "Mono-mix"
 
 msgid "Input Mix"
-msgstr "Invoer mix"
+msgstr "Invoer-mix"
 
 msgid "SPDIF In"
 msgstr "SPDIF-in"
@@ -333,13 +334,13 @@ msgid "SPDIF Out"
 msgstr "SPDIF-out"
 
 msgid "Microphone 1"
-msgstr "Microfoon 1"
+msgstr "Microfoon-1"
 
 msgid "Microphone 2"
-msgstr "Microfoon 2"
+msgstr "Microfoon-2"
 
 msgid "Digital Out"
-msgstr "Digitaal-out"
+msgstr "Digitaal-uit"
 
 msgid "Digital In"
 msgstr "Digitaal-in"
@@ -351,10 +352,10 @@ msgid "Modem"
 msgstr "Modem"
 
 msgid "Handset"
-msgstr "Mobieltje"
+msgstr "Handset"
 
 msgid "Other"
-msgstr "Overige"
+msgstr "Overig"
 
 msgid "None"
 msgstr "Geen"
@@ -366,7 +367,7 @@ msgid "Off"
 msgstr "Uit"
 
 msgid "Mute"
-msgstr "Gedempt"
+msgstr "Dempen"
 
 msgid "Fast"
 msgstr "Snel"
@@ -381,7 +382,7 @@ msgstr "Laag"
 
 #. TRANSLATORS: "Medium" is a quality setting here
 msgid "Medium"
-msgstr "Gemiddeld"
+msgstr "Middel"
 
 #. TRANSLATORS: "High" is a quality setting here
 msgid "High"
@@ -402,10 +403,10 @@ msgid "Front Panel Line In"
 msgstr "Lijn-in in frontpaneel"
 
 msgid "Front Panel Headphones"
-msgstr "Hoofdtelefoon in frontpaneel"
+msgstr "Hoofdtelefoons in frontpaneel"
 
 msgid "Front Panel Line Out"
-msgstr "Lijn-in in frontpaneel"
+msgstr "Lijn-uit in frontpaneel"
 
 msgid "Green Connector"
 msgstr "Groene connector"
@@ -462,7 +463,7 @@ msgid "Yellow Front Panel Connector"
 msgstr "Gele connector in frontpaneel"
 
 msgid "Spread Output"
-msgstr "Spread Output"
+msgstr "Uitvoer spreiden"
 
 msgid "Downmix"
 msgstr "Downmix"
@@ -477,33 +478,33 @@ msgid "Virtual Mixer Channels"
 msgstr "Virtuele mixer-kanalen"
 
 #. TRANSLATORS: name + number of a volume mixer control
-#, fuzzy, c-format
+#, c-format
 msgid "%s %d Function"
-msgstr "%s-functie"
+msgstr "%s %d functie"
 
 #. TRANSLATORS: name of a volume mixer control
 #, c-format
 msgid "%s Function"
-msgstr "%s-functie"
+msgstr "%s-function"
 
 msgid ""
 "Could not open audio device for playback. This version of the Open Sound "
 "System is not supported by this element."
 msgstr ""
 "Kan het audio-apparaat niet openen voor afspelen. Deze versie van het Open "
-"Soundsysteem wordt niet ondersteund door dit element."
+"Sound System wordt niet ondersteunt door dit element."
 
 msgid "Playback is not supported by this audio device."
-msgstr "Afspelen wordt door dit audio-apparaat niet ondersteund."
+msgstr "Afspelen wordt niet ondersteund door dit audio-apparaat"
 
 msgid "Audio playback error."
-msgstr "Fout bij audio-afspelen."
+msgstr "Fout in geluid afspelen."
 
 msgid "Recording is not supported by this audio device."
-msgstr "Opnemen wordt door dit audio-apparaat niet ondersteund."
+msgstr "Opnemen wordt niet ondersteund door dit audio-apparaat"
 
 msgid "Error recording from audio device."
-msgstr "Fout bij opnemen met dit audio-apparaat."
+msgstr "Fout bij opnemen vanaf audio-apparaat."
 
 msgid "Gain"
 msgstr "Versterking"
