--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,39 @@
-This is GStreamer Ugly Plug-ins 0.10.15 "Englishman in a Baseball Cap"
+This is GStreamer Ugly Plug-ins 0.10.16 "Because He Knows the Time is Short"
+
+Changes since 0.10.15:
+
+      * refactor x264enc to use current x264 API correctly, add new properties and new defaults
+      * liboil is no longer required, but orc is now required
+      * build: require orc >= 0.4.5, GLib >= 2.20, automake >= 1.10, autoconf >= 2.60; liboil is no longer required
+      * asfdemux: fix playback of files or streams that are shorter than the advertised preroll value
+      * asfdemux: fix sending eos event for chained asfs in pull mode (exotic)
+      * asfdemux: fix playback of files or streams that advertise miniscule preroll values
+      * lamemp3enc: implement latency query
+      * rmdemux: fix playback of sipro audio streams
+      * x264enc: refactor code in preparation for presets/tunings
+      * x264enc: add "profile" property (and default to MAIN profile)
+      * x264enc: improve defaults: medium speed/quality preset; auto mode for threads
+      * x264enc: add "speed-preset", "tune" and "psy-tune" properties
+      * x264enc: add "option-string" property to specify advanced parameters
+      * x264enc: set time base if needed, fixes visual artifacts
+      * x264enc: add "sliced-threads", "sync-lookahead", "intra-refresh", "mb-tree", and "rc-lookahead" properties
+      * x264enc: fix compilation against ancient x264 versions (X264_BUILD <= 75)
+      * x264enc: speed up first pass of multi-pass encoding (has no impact on quality)
+      * x264enc: fix flushing of delayed frames with new default settings
+
+Bugs fixed since 0.10.15:
+
+      * 599718 : [asf] support chained asfs
+      * 600412 : [asfdemux] Wrong handling of downstream GstFlowReturn
+      * 607798 : x264enc needs updating to support new features and use x264 correctly
+      * 618896 : lamemp3enc doesn't implement latency query
+      * 620007 : Gibberish sound when playing a certain RealMedia file of Sipro/ACELP.net audio codec
+      * 620344 : Update gst-plugins-ugly docs on website
+      * 622407 : [asfdemux] doesn't detect some streams if preroll value is very small
+      * 624786 : x264enc time base is wrong
+      * 625557 : x264enc doesn't flush delayed frames properly
+      * 626577 : [x264enc] regression: doesn't work with older versions of x264
+      * 627946 : mp3parse misuses GST_FLOW_IS_FATAL, doesn't forward GST_FLOW_UNEXPECTED upstream
 
 Changes since 0.10.14:
 
